@@ -22,7 +22,8 @@ module KPresenter
       slot void editHeaderFooter();
 
       slot void newView();
-
+	  slot void viewSelectionRect();
+	  
       slot void insertPage();
       slot void insertPicture();
       slot void insertClipart();
@@ -108,7 +109,7 @@ module KPresenter
       slot void textDepthMinus();
       slot void textSpacing();
       slot void textContentsToHeight();
-      
+
       slot void setPenColor(in long id);
       slot void setFillColor(in long id);
     };
