@@ -319,6 +319,11 @@ public:
 	void setFooter( bool b );
 	KPFooterHeaderEditor *getHeaderFooterEdit() { return headerFooterEdit; }
 
+	void setDrawSelectionRect( bool b )
+	{ drawSelectionRect = b; }
+	bool getDrawSelectionRect()
+	{ return drawSelectionRect; }
+	
 signals:
 
 	// document modified
@@ -413,7 +418,8 @@ protected:
 	KPTextObject *_header, *_footer;
 	bool _hasHeader, _hasFooter;
 	KPFooterHeaderEditor *headerFooterEdit;
-
+	bool drawSelectionRect;
+	
 };
 
 #endif
